--- a/Jiot3chHydro/index4.html
+++ b/Jiot3chHydro/index4.html
@@ -214,19 +214,19 @@
                 <div>
                   <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="AEP et Assainissement">
                     <div href="#lb-gallery2-3" data-slide-to="0" data-toggle="modal">
-                      <img src="img/pics_p/pic1.jpg" alt="Borne Fontaine" title="Borne Fontaine">
+                      <img src="img/pics_p/pic1.JPG" alt="Borne Fontaine" title="Borne Fontaine">
                       <span class="icon-focus"></span>
                     </div>
                   </div>
                   <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Hydraulique Pastorale">
                     <div href="#lb-gallery2-3" data-slide-to="1" data-toggle="modal">
-                      <img src="img/pics_p/pic7.jpg" alt="" title="">
+                      <img src="img/pics_p/pic7.JPG" alt="" title="">
                       <span class="icon-focus"></span>
                     </div>
                   </div>
                   <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Génie Civil">
                     <div href="#lb-gallery2-3" data-slide-to="2" data-toggle="modal">
-                      <img src="img/pics_p/pic8.jpg" alt="" title="">
+                      <img src="img/pics_p/pic8.JPG" alt="" title="">
                       <span class="icon-focus"></span>
                     </div>
                   </div>
@@ -238,54 +238,54 @@
                   </div>
                   <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="AEP et Assainissement">
                     <div href="#lb-gallery2-3" data-slide-to="4" data-toggle="modal">
-                      <img src="img/pics_p/pic11.jpg" alt="" title="">
+                      <img src="img/pics_p/pic11.JPG" alt="" title="">
                       <span class="icon-focus"></span>
                     </div>
                   </div>
                   <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="AEP et Assainissement">
                     <div href="#lb-gallery2-3" data-slide-to="5" data-toggle="modal">
-                      <img src="img/pics_p/pic15.jpg" alt="" title="">
+                      <img src="img/pics_p/pic15.JPG" alt="" title="">
                       <span class="icon-focus"></span>
                     </div>
                   </div>
                   <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Génie Civil"><div href="#lb-gallery2-3" data-slide-to="6" data-toggle="modal">
-                    <img src="img/pics_p/pic17.jpg" alt="" title="">
+                    <img src="img/pics_p/pic17.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="AEP et Assainissement">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic22.jpg" alt="" title="">
+                    <img src="img/pics_p/pic22.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="AEP et Assainissement">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic23.jpg" alt="" title="">
+                    <img src="img/pics_p/pic23.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Hydraulique Agricole">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic33.jpg" alt="" title="">
+                    <img src="img/pics_p/pic33.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Hydraulique Agricole">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic31.jpg" alt="" title="">
+                    <img src="img/pics_p/pic31.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Hydraulique Agricole">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic32.jpg" alt="" title="">
+                    <img src="img/pics_p/pic32.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="AEP et Assainissement">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic25.jpg" alt="" title="">
+                    <img src="img/pics_p/pic25.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
@@ -297,7 +297,7 @@
                 </div>
                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Génie Informatique">
                   <div href="#lb-gallery2-3" data-slide-to="7" data-toggle="modal">
-                    <img src="img/pics_p/pic43.jpg" alt="" title="">
+                    <img src="img/pics_p/pic43.JPG" alt="" title="">
                     <span class="icon-focus"></span>
                   </div>
                 </div>
